# Ralewaypy

./: .env  .gitignore  README.md  app.py  config_updater.py  docker-compose.yml  gui.py  launch_railway_system.bat  menu.py  pyproject.toml  requirements.txt  scheduler.py  test_auth.py  turnstile.py
.github/workflows/: release.yml
app-ui/: .gitignore  build-electron.ps1  build.ps1  build.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts
app-ui/backend/: app.py  build.ps1  build.sh
app-ui/src/main/: main.ts
app-ui/src/preload/: preload.ts
app-ui/src/renderer/: App.tsx  stations.ts  vite-env.d.ts
app-ui/src/renderer/components/: Onboarding.tsx  TitleBar.tsx
app-ui/src/renderer/styles/: index.css
app-ui/src/types/: wink-bm25-text-search.d.ts  wink-lemmatizer.d.ts
frontend/: .dockerignore  Dockerfile  package-lock.json
frontend/src/app/: page.tsx
frontend/src/app/api/provide-input/: route.ts
frontend/src/app/api/run-script/: route.ts
frontend/src/app/api/settings/: route.ts
