[project]
name = "railway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "colorama>=0.4.6",
    "ntplib>=0.4.0",
    "pip>=25.0.1",
    "playwright>=1.40.0",
    "pyqt6>=6.8.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.0",
    "yt-dlp>=2025.2.19",
]
