[project]
name = "railway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "colorama>=0.4.6",
    "ntplib>=0.4.0",
    "pip>=25.0.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
]
